@startuml
'https://plantuml.com/class-diagram

class Application
enum Categorie
{
    HIGH-TECH
    CLES
    VETEMENTS
    GARDE-ROBE
}

class Matcher
{
    + this(evaluation: integer): Matcher
    + matching(intitule: string, categorie: Categorie, date: Date, localisation: Localisation): Matcher
}

interface Calculateur
{
    +getDistance(localisationUser: LocalisationPrecise, localisationObjet: Localisation): Calculateur
}

class CalculateurFlou
{
    +getDistance(localisationUser: LocalisationPrecise, localisationObjet: LocalisationFloue): CalculateurFlou
}

class CalculateurPrecis
{
    +getDistance(localisationUser: LocalisationPrecise, localisationObjet: LocalisationPrecise): CalculateurPrecis
}

interface Item
{
    +getDistance(localisationUser: Localisation, localisationObjet: Localisation) : Calculateur
}

class ObjetTrouve
{
    +this(localisation: LocalisationPrecise, calculateur: CalculateurPrecis, matcher: Matcher, categorie: Categorie, description: string, intitule: string, date: Date, adresseMail: string): ObjetTrouve
    +getDistance(localisationUser: Localisation, localisationObjet: LocalisationPrecise) : CalculateurPrecis
}

class ObjetPerdu
{
    +this(localisation: LocalisationFloue, calculateur: CalculateurFlou, matcher: Matcher, categorie: Categorie, description: string, intitule: string, date: Date, adresseMail: string): ObjetPerdu
    +getDistance(localisationUser: Localisation, localisationObjet: LocalisationFloue) : CalculateurFlou
}

class Position
{
    - double longitude
    - double latitude
    + this(longitude : double, latitude : double): Position
}

interface Localisation
{
}

class LocalisationPrecise
{
    +this(position : Position): LocalisationPrecise
}

class LocalisationFloue
{
    +this(position : Position, rayon : double): LocalisationFloue
}


ObjetTrouve "1...*" --* Application
ObjetPerdu "1...*" --* Application

Categorie <.. ObjetTrouve
Categorie <.. ObjetPerdu

Item <|.. ObjetPerdu
Item <|.. ObjetTrouve

Localisation <|.. LocalisationPrecise
Localisation <|.. LocalisationFloue

LocalisationPrecise "1" <.. ObjetTrouve
LocalisationFloue "1" <.. ObjetPerdu

Position "1" <-- Localisation

Calculateur "1" <-- ObjetTrouve
Calculateur "1" <-- ObjetPerdu

Calculateur <|.. CalculateurFlou
Calculateur <|.. CalculateurPrecis

@enduml